# parse_environ

./: .gitignore  CMakeLists.txt  README.md  ansible.test.yml  codecov.yml  hosts.yml  parse_environ.h  parse_environ_get_next_kv.test.c  parse_environ_iovec.test.c  parse_environ_load_proc_env.test.c
.github/workflows/: blank.yml  ccpp.yml
testdata/: env2  environ
